core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-listing-panel/dot-pages-listing-panel.component.scss
@use "variables" as *;

:host {
    margin-bottom: $spacing-4;
}

::ng-deep {
    .p-datatable .p-datatable-tbody tr td {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 0;
        padding: 0 $spacing-2;

        &:last-child {
            padding-right: $spacing-2;
            text-align: right;
            text-overflow: unset;
        }
    }

    .p-datatable .p-datatable-header {
        background-color: $color-palette-gray-200;
        padding: $spacing-3;
    }

    .dot-pages-listing-header__language-input .p-dropdown-label.p-inputtext {
        min-width: 115px;
    }

    .p-datatable .p-datatable-tbody tr td.dot-pages-listing__empty-content {
        text-align: center;
    }
}

.dot-pages-listing-header__inputs {
    display: flex;
    align-items: center;

    p-dropdown,
    p-checkbox {
        font-weight: $font-weight-regular-bold;
        margin-left: $spacing-3;
    }
}

.dot-pages-listing-header__filter-input {
    width: 250px;
}

.dot-pages-table__status-field {
    dot-badge,
    dot-contentlet-lock-icon {
        margin-left: $spacing-1;
    }
    display: flex;
}

.pi.pi-times {
    cursor: pointer;
}

